# diplom_10

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini
.github/workflows/: build.yaml  build_and_deploy.yaml  builds.yaml
deploy/: .env  docker-compose-ci.yaml  docker-compose.prod.yaml  docker-compose.yaml  nginx.conf
deploy2/: docker-compose.yml
tests/: factories.py  fixtures.py
tests/board_tests/: board_create_test.py  board_delete_test.py  board_detail_test.py  board_unAuth_test.py  board_update_test.py  boards_list_test.py
tests/comment_tests/: comment_create_test.py  comment_delete_test.py  comment_unAuth_test.py  comment_update_test.py
tests/core_tests/: change_password_test.py  delete_user_test.py  login_test.py  signup_test.py  update_user_profile_test.py
tests/goal_categories_tests/: category_create_test.py  category_delete_test.py  category_update_test.py  categorys_list_test.py  nuAuth_user_cat_test.py
tests/goals_tests/: goal_create_test.py  goal_delete_test.py  goal_unAuth_test.py  goal_update_test.py  goals_list_test.py
todolist/: settings.py  urls.py
todolist/bot/: admin.py  models.py  serializers.py  urls.py  views.py
todolist/bot/migrations/: 0001_initial.py  0001_tg_user_model.py  0002_alter_tguser_chat_id.py  0002_tguser_username_alter_tguser_chat_id.py  0003_alter_tguser_user.py
todolist/bot/tg/: client.py  dc.py  schemas.py
todolist/core/: admin.py  fields.py  models.py  serializers.py  urls.py  views.py
todolist/core/migrations/: 0001_initial.py
todolist/goals/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
todolist/goals/migrations/: 0001_initial.py  0002_goal.py  0003_goalcomment.py  0004_board_goalcategory_board_boardparticipant.py  0005_create_new_objects.py  0006_alter_goalcategory_board.py
(+2 files in other folders)
