[tool.poetry]
name = "diplom-10"
version = "0.1.0"
description = ""
authors = ["mustafanysan <mustafa.nysan@mail.ru>"]
readme = "README.md"
packages = [{include = "diplom_10"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
envparse = "^0.2.0"
psycopg2-binary = "^2.9.5"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
